# compass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WXWIDGETS.md  init-submodules.bat  init-submodules.sh  wxwidgets-available-features.txt  wxwidgets-configure-options.txt
cmake/: Dependencies.cmake  README.md  build-wxwidgets-windows.bat
scripts/: build-glew-linux.sh  build-glew-macos.sh  build-glew-windows.sh  build-glm.sh  build-wxwidgets-linux.sh  build-wxwidgets-macos.sh  build-wxwidgets-windows.sh
src/: main.cpp  sound_test.cpp
